codigo do dia 15/05

--- a/templates/loja/home.html
+++ b/templates/loja/home.html
@@ -47,17 +47,17 @@
     
     <div class="carousel-inner mt-4" style="background-color: #FFE4E1; height: 500px;">
       <div class="carousel-item active">
-        <img src="/media/pedidos_fotos/cesta-basica.jpeg" class="d-block mx-auto img-fluid" style="max-width: 650px;"
+        <img src="/media/static/pedidos_fotos/foto1.png" class="d-block mx-auto img-fluid" style="max-width: 350px;"
           alt="...">
       </div>
 
       <div class="carousel-item">
-        <img src="/media/pedidos_fotos/cesta-basica.jpeg" class="d-block mx-auto img-fluid" style="max-width: 650px;"
+        <img src="/media/static/pedidos_fotos/foto4.png" class="d-block mx-auto img-fluid" style="max-width: 350px;"
           alt="...">
       </div>
 
       <div class="carousel-item">
-        <img src="/media/pedidos_fotos/cesta-basica.jpeg" class="d-block mx-auto img-fluid" style="max-width: 650px;"
+        <img src="/media/static/pedidos_fotos/foto5.jpg" class="d-block mx-auto img-fluid" style="max-width: 350px;"
           alt="...">
       </div>
     </div>
