--- a/templates/navbar/base.html
+++ b/templates/navbar/base.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Document</title>
 </head>
-
+ 
 <body>
     {% block content %}
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ebd7f5;">
@@ -35,14 +35,21 @@
 
                 </ul>
             </div>
-            
+
 
             <!-- sacola de compras -->
-            <svg xmlns="http://www.w3.org/2000/svg" width="100" height="25" fill="currentColor" class="bi bi-bag-heart"
-                viewBox="0 0 16 16" style="cursor: pointer;">
-                <path fill-rule="evenodd"
-                    d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132" />
-            </svg>
+            
+
+            <a href="{% url 'ver_carrinho' %}">
+
+                
+                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="25" fill="currentColor"
+                class="bi bi-bag-heart" viewBox="0 0 16 16" style="cursor: pointer;">
+                ({{ total_itens_carrinho }})
+                    <path fill-rule="evenodd"
+                        d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132" />
+                </svg>
+            </a>
 
             <!-- User -->
             <svg xmlns="http://www.w3.org/2000/svg" width="55" height="25" fill="currentColor"
