codigo do dia 29-05

--- a/templates/loja/detalhe_pedido.html
+++ b/templates/loja/detalhe_pedido.html
@@ -17,7 +17,7 @@
             {% csrf_token %}
             <div class="mb-4">
                 <label for="quantidade" class="form-label fw-bold">Quantidade:</label>
-                <input type="number" name="quantidade" id="quantidade" value="1" min="1"
+                <input type="number" name="quantidade" id="quantidade" value="1" min="1" max="5"
                     class="form-control text-center" style="max-width: 120px; margin: 0 auto;">
             </div>
 
