--- a/templates/admin/excluir_pedido.html
+++ b/templates/admin/excluir_pedido.html
@@ -2,14 +2,18 @@
 
 {% block content %}
 <div class="container mt-5" style="max-width: 600px;">
-  <div class="card p-4 shadow" style="background-color: #FFF0F5;">
+  <div class="card p-4 shadow-sm rounded-3" style="background-color: #FFF0F5;">
     <h3 class="text-center mb-4 fw-bold text-dark">Excluir Pedido</h3>
     <p class="text-center">Você tem certeza que deseja excluir o pedido "{{ pedido.nome }}"?</p>
     <div class="text-center">
       <form method="POST">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Excluir</button>
-        <a href="{% url 'painel_admin' %}" class="btn btn-secondary ms-2">Cancelar</a>
+        <button type="submit" class="btn btn-danger btn-lg">
+          <i class="bi bi-trash me-2"></i>Excluir
+        </button>
+        <a href="{% url 'painel_admin' %}" class="btn btn-secondary btn-lg ms-2">
+          <i class="bi bi-arrow-left-circle me-2"></i>Cancelar
+        </a>
       </form>
     </div>
   </div>
