--- a/templates/admin/painel_admin.html
+++ b/templates/admin/painel_admin.html
@@ -1,23 +1,31 @@
 {% extends 'navbar/base.html' %}
 
 {% block content %}
-  <div class="container">
-    <h1 class="text-center">Painel de Administração</h1>
+  <div class="container my-4">
+    <h1 class="text-center mb-4">Painel de Administração</h1>
     
     <div class="text-center mb-4">
-      <a href="{% url 'adicionar_pedido' %}" class="btn btn-primary">Adicionar produto</a>
+      <a href="{% url 'adicionar_pedido' %}" class="btn btn-primary btn-lg">
+        <i class="bi bi-plus-circle me-2"></i>Adicionar Produto
+      </a>
     </div>
-    
+
     <div class="row">
       {% for pedido in pedidos %}
-        <div class="col-md-3 mb-4">
-          <div class="card">
-            <img src="{{ pedido.foto.url }}" class="card-img-top" alt="Imagem do pedido">
+        <div class="col-md-4 mb-4">
+          <div class="card shadow-sm border-light rounded-3">
+            <img src="{{ pedido.foto.url }}" class="card-img-top" alt="Imagem do pedido" style="height: 200px; object-fit: cover;">
             <div class="card-body">
               <h5 class="card-title">{{ pedido.nome }}</h5>
-              <p class="card-text">{{ pedido.descricao }}</p>
-              <a href="{% url 'editar_pedido' pedido.id %}" class="btn btn-warning">Editar</a>
-              <a href="{% url 'excluir_pedido' pedido.id %}" class="btn btn-danger">Excluir</a>
+              <p class="card-text text-muted">{{ pedido.descricao }}</p>
+              <div class="d-flex justify-content-between align-items-center">
+                <a href="{% url 'editar_pedido' pedido.id %}" class="btn btn-warning btn-sm">
+                  <i class="bi bi-pencil-square me-2"></i>Editar
+                </a>
+                <a href="{% url 'excluir_pedido' pedido.id %}" class="btn btn-danger btn-sm">
+                  <i class="bi bi-trash me-2"></i>Excluir
+                </a>
+              </div>
             </div>
           </div>
         </div>
