--- a/templates/loja/itens_carrinho.html
+++ b/templates/loja/itens_carrinho.html
@@ -109,8 +109,8 @@
             <a href="{% url 'loja' %}" class="btn btn-primary">
                 <i class="bi bi-arrow-left"></i> Continuar comprando
             </a>
-            <a href="{% url 'pagar' %}" class="btn btn-success">
-                Finalizar compra <i class="bi bi-arrow-right-circle ms-1"></i>
+            <a href="{% url 'cadastrar_endereco' %}" class="btn btn-success">
+                Cadastar Endereço<i class="bi bi-arrow-right-circle ms-1"></i>
             </a>
         </div>
 
