--- a/templates/navbar/base.html
+++ b/templates/navbar/base.html
@@ -1,89 +1,89 @@
+{% comment %} base.html {% endcomment %}
+{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{% block title %}MadeMoments{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}?v=5">
+    <link rel="stylesheet" href="{% static 'css/footer.css' %}?v=5">
+    {% block head %}{% endblock %}
 </head>
- 
-<body>
-    {% block content %}
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #ebd7f5;">
+
+<body style="background-color: #eeeee6;">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg custom-navbar">
         <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link active fw-bolder" aria-current="page" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link active dropdown-toggle fw-bolder" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Produtos
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item fw-bolder" href="#">Fotos</a></li>
-                            <li><a class="dropdown-item fw-bolder" href="#">Presentes</a></li>
+            <!-- Logo -->
+            <a class="navbar-brand custom-logo" href="/">
+                <img src="{% static 'img/logo-icon/logo2.png' %}" alt="Logo" class="img-logo">
+            </a>
 
-                        </ul>
-                    </li>
-
-                </ul>
+            <!-- Ícones -->
+            <div class="d-flex align-items-center">
+                <a href="#" class="icon-link">
+                    <span class="sobre_nos">SOBRE</span>
+                </a>
+                <a href="{% url 'ver_carrinho' %}" class="icon-link">
+                    <i class="bi bi-bag-heart"></i>
+                    <span class="num_carrinho">({{ total_itens_carrinho }})</span>
+                </a>
+                <a href="{% url 'visualizar_perfil' %}" class="icon-link">
+                    <i class="bi bi-person-circle"></i>
+                </a>
+                <a href="{% url 'logout' %}" class="icon-link">
+                    <i class="bi bi-box-arrow-right"></i>
+                </a>
             </div>
-
-
-            <!-- sacola de compras -->
-            
-
-            <a href="{% url 'ver_carrinho' %}">
-
-                
-                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="25" fill="currentColor"
-                class="bi bi-bag-heart" viewBox="0 0 16 16" style="cursor: pointer; color:rgb(0, 0, 0)">
-                ({{ total_itens_carrinho }})
-                    <path fill-rule="evenodd"
-                        d="M10.5 3.5a2.5 2.5 0 0 0-5 0V4h5zm1 0V4H15v10a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V4h3.5v-.5a3.5 3.5 0 1 1 7 0M14 14V5H2v9a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1M8 7.993c1.664-1.711 5.825 1.283 0 5.132-5.825-3.85-1.664-6.843 0-5.132" />
-                </svg>
-            </a>
-
-            <!-- User -->
-            <a href="{% url 'visualizar_perfil'%}" >
-                <svg xmlns="http://www.w3.org/2000/svg" width="100" height="25" fill="currentColor"
-                class="bi bi-person-circle" viewBox="0 0 16 16" style="cursor: pointer; color:black">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                <path fill-rule="evenodd"
-                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-            </svg>
-        </a>
-
-            <!-- <a class="navbar-brand" href="#" style="pointer-events: none">
-                {% if usuario %}
-                Olá, {{ usuario.nome }}!
-                {% else %}
-                Bem-vindo!
-                {% endif %}
-            </a> -->
-
-            <!-- Logout -->
-            <a href="{% url  'logout' %}" style="color: black;">
-                <svg id="i-signout" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" width="52" height="32"
-                    fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                    style="cursor: pointer;">
-                    <path d="M28 16 L8 16 M20 8 L28 16 20 24 M11 28 L3 28 3 4 11 4" />
-                </svg>
-            </a>
         </div>
-        {% endblock %}
     </nav>
 
+    <!-- Conteúdo principal -->
+    {% block content %}{% endblock %}
 
+    <!-- Footer -->
+    <footer class="footer mt-5 py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 mb-3">
+                    <h5>Sobre nós</h5>
+                    <p>Trabalhamos com produtos personalizados, feitos com carinho para deixar seus momentos ainda mais especiais.</p>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <h5>Contato</h5>
+                    <p>Email: atendimento@seudominio.com</p>
+                    <p>Telefone: (11) 99999-9999</p>
+                    <p>Endereço: Patos de Minas - MG</p>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <!-- No bloco "Contato" -->
+                    <div class="social-icons mt-3">
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <img src="{% static 'img/logo-icon/instagram.png' %}" alt="Instagram" class="icon">
+                    </a>
+                    <a href="https://wa.me/5511999999999" target="_blank">
+                        <img src="{% static 'img/logo-icon/whatsapp.png' %}" alt="WhatsApp" class="icon">
+                    </a>
+                    <a href="https://www.mercadopago.com.br/" target="_blank">
+                        <img src="{% static 'img/logo-icon/mercado-pago.png' %}"
+                            alt="Mercado Pago – selo oficial" class="icon selo oficial">
+                    </a>
+                    </div>
+                </div>
+            </div>
+            
+            <hr>
+            <div class="text-center">
+                <p class="mb-0">&copy; 2025 - Todos os direitos reservados | Made Moments</p>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </html>
