Correçoes no login

--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -28,7 +28,7 @@
                 <input name="email" type="email" class="form-control" placeholder="E-mail" required>
             </div>
             <div class="mb-3">
-                <input name="senha" type="password" class="form-control" placeholder="Senha" required>
+                <input name="password" type="password" class="form-control" placeholder="Senha" required>
             </div>
 
             {% if messages %}
