--- a/templates/loja/home.html
+++ b/templates/loja/home.html
@@ -20,19 +20,14 @@
         aria-current="true" aria-label="Slide 1"></button>
       <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
         aria-label="Slide 2"></button>
-      <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-        aria-label="Slide 3"></button>
     </div>
 
     <div class="carousel-inner mt-4" style="background-color: #ffe4e100; height: 500px;">
       <div class="carousel-item active">
-        <img src="{% static 'img/carousel/1.jpg' %}" class="d-block mx-auto img-fluid">
+        <img src="{% static 'img/carousel/carousel1.jpg' %}" class="d-block mx-auto img-fluid">
       </div>
       <div class="carousel-item">
-        <img src="{% static 'img/carousel/1.jpg' %}" class="d-block mx-auto img-fluid">
-      </div>
-      <div class="carousel-item">
-        <img src="{% static 'img/carousel/1.jpg' %}" class="d-block mx-auto img-fluid">
+        <img src="{% static 'img/carousel/carousel2.jpg' %}" class="d-block mx-auto img-fluid">
       </div>
     </div>
 
