--- a/templates/navbar/base.html
+++ b/templates/navbar/base.html
@@ -7,6 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}MadeMoments{% endblock %}</title>
+    <link rel="icon" href="{% static 'img/logo-icon/logo-ico.ico' %}" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/navbar.css' %}?v=5">
@@ -25,7 +26,7 @@
 
             <!-- Ícones -->
             <div class="d-flex align-items-center">
-                <a href="#" class="icon-link">
+                <a href="{% url 'sobre' %}" class="icon-link">
                     <span class="sobre_nos">SOBRE</span>
                 </a>
                 <a href="{% url 'ver_carrinho' %}" class="icon-link">
@@ -62,13 +63,13 @@
                 <div class="col-md-4 mb-3">
                     <!-- No bloco "Contato" -->
                     <div class="social-icons mt-3">
-                    <a href="https://www.instagram.com/" target="_blank">
+                    <a href="https://www.instagram.com/made__moments/" target="_blank">
                         <img src="{% static 'img/logo-icon/instagram.png' %}" alt="Instagram" class="icon">
                     </a>
                     <a href="https://wa.me/5511999999999" target="_blank">
                         <img src="{% static 'img/logo-icon/whatsapp.png' %}" alt="WhatsApp" class="icon">
                     </a>
-                    <a href="https://www.mercadopago.com.br/" target="_blank">
+                    <a href="" target="_blank">
                         <img src="{% static 'img/logo-icon/mercado-pago.png' %}"
                             alt="Mercado Pago – selo oficial" class="icon selo oficial">
                     </a>
