--- a/templates/admin/editar_pedido.html
+++ b/templates/admin/editar_pedido.html
@@ -1,14 +1,20 @@
 {% extends 'navbar/base.html' %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/admin/adm.css' %}?v=1">
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5" style="max-width: 600px;">
-  <div class="card p-4 shadow-sm rounded-3" style="background-color: #FFF0F5;">
+  <div class="card p-4 shadow-sm rounded-3">
     <h3 class="text-center mb-4 fw-bold text-dark">Editar Pedido</h3>
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       {{ form.as_p }}
       <div class="text-center">
-        <button type="submit" class="btn btn-warning btn-lg">
+        <button type="submit" class="btn btn-primary">
           <i class="bi bi-pencil-square me-2"></i>Atualizar
         </button>
         <a href="{% url 'painel_admin' %}" class="btn btn-secondary btn-lg ms-2">
