--- a/templates/admin/excluir_pedido.html
+++ b/templates/admin/excluir_pedido.html
@@ -1,14 +1,20 @@
 {% extends 'navbar/base.html' %}
 
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/admin/adm.css' %}?v=1">
+{% endblock %}
+
 {% block content %}
 <div class="container mt-5" style="max-width: 600px;">
-  <div class="card p-4 shadow-sm rounded-3" style="background-color: #FFF0F5;">
+  <div class="card p-4 shadow-sm rounded-3">
     <h3 class="text-center mb-4 fw-bold text-dark">Excluir Pedido</h3>
     <p class="text-center">Você tem certeza que deseja excluir o pedido "{{ pedido.nome }}"?</p>
     <div class="text-center">
       <form method="POST">
         {% csrf_token %}
-        <button type="submit" class="btn btn-danger btn-lg">
+        <button type="submit" class="btn btn-primary>
           <i class="bi bi-trash me-2"></i>Excluir
         </button>
         <a href="{% url 'painel_admin' %}" class="btn btn-secondary btn-lg ms-2">
