--- a/templates/admin/produto_form.html
+++ b/templates/admin/produto_form.html
@@ -1,4 +1,9 @@
 {% extends 'navbar/base.html' %}
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" href="{% static 'css/admin/adm.css' %}?v=1">
+{% endblock %}
 
 {% block content %}
 <div class="container mt-5" style="max-width: 600px;">
