feat: cores na página detalhes_produtos

--- a/templates/admin/painel_admin.html
+++ b/templates/admin/painel_admin.html
@@ -3,6 +3,7 @@
 {% load static %}
 
 {% block head %}
+<title>{% block title %}Painel Adm{% endblock %}</title>
 <link rel="stylesheet" href="{% static 'css/admin/adm.css' %}?v=1">
 {% endblock %}
 
