--- a/static/css/detalhe_pedido.css
+++ b/static/css/detalhe_pedido.css
@@ -1,10 +1,10 @@
 :root {
-    --bg-color: #f9f7f4;
+    --bg-color: #eeeee6;
     --primary-color: #693d14;
     --hover-color: #d4b499;
     --text-color: #333;
     --border-color: #ddd;
-    --bg-card: #fefcf9; 
+    --bg-card: #fdfbf9; 
     --font-family: 'Segoe UI', sans-serif;
 }
 
