--- a/static/css/detalhe_pedido.css
+++ b/static/css/detalhe_pedido.css
@@ -2,8 +2,8 @@
     --bg-color: #eeeee6;
     --primary-color: #693d14;
     --hover-color: #d4b499;
-    --text-color: #333;
-    --border-color: #ddd;
+    --text-color: #554037;
+    --border-color: #d9d0c1;
     --bg-card: #fdfbf9; 
     --font-family: 'Segoe UI', sans-serif;
 }
