--- a/templates/loja/itens_carrinho.html
+++ b/templates/loja/itens_carrinho.html
@@ -10,54 +10,66 @@
     <hr>
 
     {% if itens %}
-        {% for item in itens %}
-        <div class="cart-card row align-items-center">
-            <div class="col-md-2 text-center">
-                <img src="{{ item.pedido.foto.url }}" alt="Foto do item" class="product-img">
-            </div>
-            <div class="col-md-6">
-                <h5 class="mb-1">{{ item.pedido.categoria }}</h5>
-                <p class="mb-0">Quantidade: <strong>{{ item.quantidade }}</strong></p>
-                <p class="mb-0">Valor unitário: <strong>R$ {{ item.pedido.valor|floatformat:2 }}</strong></p>
-            </div>
-            <div class="col-md-2 text-center">
-                <span class="badge badge-subtotal fs-6 p-2">Subtotal: R$ {{ item.subtotal|floatformat:2 }}</span>
-            </div>
-            <div class="col-md-2 text-end">
-                <form method="POST" action="{% url 'remover_carrinho' item.pedido.id %}">
+    {% for item in itens %}
+    <div class="cart-card row align-items-center">
+        <div class="col-md-2 text-center">
+            <img src="{{ item.pedido.foto.url }}" alt="Foto do item" class="product-img">
+        </div>
+        <div class="col-md-6">
+            <h5 class="mb-1">{{ item.pedido.categoria }}</h5>
+            <div class="d-flex align-items-center mb-1">
+                <p class="mb-0 me-2">Quantidade: <strong>{{ item.quantidade }}</strong></p>
+
+                <form method="POST" action="{% url 'remover_uma_unidade' item.pedido.id %}">
                     {% csrf_token %}
-                    <button type="submit" class="btn btn-primary">
-                        <i class="bi bi-trash"></i> Remover
+                    <button type="submit" class="btn btn-outline-danger btn-sm">
+                        <i class="bi bi-dash-circle"></i>
                     </button>
                 </form>
+
             </div>
+            <p class="mb-0">Valor unitário: <strong>R$ {{ item.pedido.valor|floatformat:2 }}</strong></p>
         </div>
-        {% endfor %}
-
-        <div class="cart-card d-flex justify-content-between align-items-center">
-            <h4 class="mb-0 text-dark">Total geral:</h4>
-            <span class="badge badge-total fs-5 p-2">R$ {{ total_geral|floatformat:2 }}</span>
+        <div class="col-md-2 text-center">
+            <span class="badge badge-subtotal fs-6 p-2">Subtotal: R$ {{ item.subtotal|floatformat:2 }}</span>
         </div>
+        <div class="col-md-2 text-end">
 
-
-        <div class="d-flex justify-content-between mt-4">
-            <a href="{% url 'loja' %}" class="btn btn-primary">
-                <i class="bi bi-arrow-left"></i> Continuar comprando
-            </a>
-            <a href="{% url 'cadastrar_endereco' %}" class="btn btn-primary">
-                Cadastrar Endereço<i class="bi bi-arrow-right-circle ms-1"></i>
-            </a>
+            <!--Remove tudo-->
+            <form method="POST" action="{% url 'remover_carrinho' item.pedido.id %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-primary">
+                    <i class="bi bi-trash"></i> Remover
+                </button>
+            </form>
         </div>
+    </div>
+    {% endfor %}
+
+    <div class="cart-card d-flex justify-content-between align-items-center">
+        <h4 class="mb-0 text-dark">Total geral:</h4>
+        <span class="badge badge-total fs-5 p-2">R$ {{ total_geral|floatformat:2 }}</span>
+    </div>
+
+
+    <div class="d-flex justify-content-between mt-4">
+        <a href="{% url 'loja' %}" class="btn btn-primary">
+            <i class="bi bi-arrow-left"></i> Continuar comprando
+        </a>
+        <a href="{% url 'cadastrar_endereco' %}" class="btn btn-primary">
+            Cadastrar Endereço<i class="bi bi-arrow-right-circle ms-1"></i>
+        </a>
+    </div>
 
     {% else %}
-        <div class="alert alert-warning text-center">
-            Seu carrinho está vazio.
-        </div>
-        <div class="text-center">
-            <a href="{% url 'loja' %}" class="btn btn-primary">
-                <i class="bi bi-cart-plus"></i> Ir para a loja
-            </a>
-        </div>
+    <div class="alert alert-warning text-center">
+        Seu carrinho está vazio.
+    </div>
+    <div class="text-center">
+        <a href="{% url 'loja' %}" class="btn btn-primary">
+            <i class="bi bi-cart-plus"></i> Ir para a loja
+        </a>
+    </div>
     {% endif %}
 </div>
 
