--- a/templates/loja/home.html
+++ b/templates/loja/home.html
@@ -22,7 +22,7 @@
         aria-label="Slide 2"></button>
     </div>
 
-    <div class="carousel-inner mt-4" style="background-color: #ffe4e100; height: 500px;">
+    <div class="carousel-inner mt-4">
       <div class="carousel-item active">
         <img src="{% static 'img/carousel/carousel1.jpg' %}" class="d-block mx-auto img-fluid">
       </div>
